--- a/dns/bind9-tsig-secret.yaml.template
+++ b/dns/bind9-tsig-secret.yaml.template
@@ -5,7 +5,8 @@ metadata:
   namespace: dns
 type: Opaque
 stringData:
-  keyname: "externaldns-key."
-  algorithm: "hmac-sha256"
-  secret: "${EXTERNAL_DNS_SECRET_KEY}"
-
+  key.conf: |
+    key "externaldns-key." {
+      algorithm hmac-sha256;
+      secret "${EXTERNAL_DNS_SECRET_KEY}";
+    };
