--- a/dns/bind9.yaml
+++ b/dns/bind9.yaml
@@ -15,28 +15,56 @@ data:
       listen-on port 53 { any; };
       allow-query { any; };
       recursion no;
+      # optional hardening:
+      # allow-transfer { none; };
+      # allow-query-cache { none; };
     };
 
-    key "externaldns-key." {
-      algorithm hmac-sha256;
-      secret "<KEY_BASE64>";
-    };
+    include "/etc/bind/keys/key.conf";
 
     zone "merenda.home.arpa" IN {
       type master;
-      file "/var/lib/bind/merenda.home.arpa.zone";
+      file "/var/cache/bind/merenda.home.arpa.db";
+      allow-update { key "externaldns-key."; };
+    };
+
+    zone "amer.local" IN {
+      type master;
+      file "/var/cache/bind/amer.local.db";
+      allow-update { key "externaldns-key."; };
+    };
+
+    zone "amer.home" IN {
+      type master;
+      file "/var/cache/bind/amer.home.db";
+      allow-update { key "externaldns-key."; };
+    };
+
+    zone "20.100.10.in-addr.arpa" IN {
+      type master;
+      file "/var/cache/bind/20.100.10.in-addr.arpa.db";
       allow-update { key "externaldns-key."; };
     };
   merenda.home.arpa.zone: |
     $TTL 300
-    @   IN SOA ns1.merenda.home.arpa. hostmaster.merenda.home.arpa. (
-            2025100401 ; serial
-            60         ; refresh
-            30         ; retry
-            604800     ; expire
-            60 )       ; minimum
+    @   IN SOA ns1.merenda.home.arpa. hostmaster.merenda.home.arpa. (2025100401 60 30 604800 60)
         IN NS ns1.merenda.home.arpa.
     ns1 IN A 10.100.20.241
+  amer.local.zone: |
+    $TTL 300
+    @   IN SOA ns1.amer.local. hostmaster.amer.local. (2025100401 60 30 604800 60)
+        IN NS ns1.amer.local.
+    ns1 IN A 10.100.20.241
+  amer.home.zone: |
+    $TTL 300
+    @   IN SOA ns1.amer.home. hostmaster.amer.home. (2025100401 60 30 604800 60)
+        IN NS ns1.amer.home.
+    ns1 IN A 10.100.20.241
+  20.100.10.in-addr.arpa.zone: |
+    $TTL 300
+    @   IN SOA ns1.merenda.home.arpa. hostmaster.merenda.home.arpa. (2025100401 60 30 604800 60)
+        IN NS ns1.merenda.home.arpa.
+    241 IN PTR ns1.merenda.home.arpa.
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -45,28 +73,58 @@ metadata:
   namespace: dns
 spec:
   replicas: 1
-  selector: { matchLabels: { app: bind9 } }
+  selector:
+    matchLabels:
+      app: bind9
   template:
-    metadata: { labels: { app: bind9 } }
+    metadata:
+      labels:
+        app: bind9
     spec:
+      initContainers:
+      - name: init-zones
+        image: busybox
+        command: ["/bin/sh","-c"]
+        args:
+          - >
+            set -e;
+            mkdir -p /cache;
+            for f in /config/*.zone; do
+              base="$(basename "$f" .zone)";
+              [ -f "/cache/${base}.db" ] || cp "$f" "/cache/${base}.db";
+            done;
+        volumeMounts:
+        - name: zones
+          mountPath: /config
+        - name: cache
+          mountPath: /cache
       containers:
       - name: bind9
-        image: internetsystemsconsortium/bind9:9.18
+        image: ubuntu/bind9:latest
         ports:
-        - containerPort: 53
-          name: dns-tcp
+        - name: dns-tcp
+          containerPort: 53
           protocol: TCP
-        - containerPort: 53
-          name: dns-udp
+        - name: dns-udp
+          containerPort: 53
           protocol: UDP
         volumeMounts:
         - name: conf
           mountPath: /etc/bind
         - name: zones
           mountPath: /var/lib/bind
-        env:
-        - name: BIND9_USER
-          value: "bind"
+        - name: cache
+          mountPath: /var/cache/bind
+        - name: tsig
+          mountPath: /etc/bind/keys
+        livenessProbe:
+          tcpSocket: { port: 53 }
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        readinessProbe:
+          tcpSocket: { port: 53 }
+          initialDelaySeconds: 5
+          periodSeconds: 5
       volumes:
       - name: conf
         configMap:
@@ -78,8 +136,15 @@ spec:
         configMap:
           name: bind9-config
           items:
-          - key: merenda.home.arpa.zone
-            path: merenda.home.arpa.zone
+          - { key: merenda.home.arpa.zone,           path: merenda.home.arpa.zone }
+          - { key: amer.local.zone,                  path: amer.local.zone }
+          - { key: amer.home.zone,                   path: amer.home.zone }
+          - { key: 20.100.10.in-addr.arpa.zone,      path: 20.100.10.in-addr.arpa.zone }
+      - name: cache
+        emptyDir: {}
+      - name: tsig
+        secret:
+          secretName: bind9-tsig
 ---
 apiVersion: v1
 kind: Service
@@ -89,7 +154,8 @@ metadata:
 spec:
   type: LoadBalancer
   loadBalancerIP: 10.100.20.241
-  selector: { app: bind9 }
+  selector:
+    app: bind9
   ports:
   - name: dns-udp
     port: 53
@@ -99,4 +165,3 @@ spec:
     port: 53
     targetPort: 53
     protocol: TCP
-
