--- a/home-assistant/secret.yaml
+++ b/home-assistant/secret.yaml
@@ -7,4 +7,4 @@ type: Opaque
 stringData:
   secrets.yaml: |
     eufy_username: "${EUFY_USERNAME}"
-    eufy_password: "${EUFY_PASSWORD}"
+    eufy_password: '${EUFY_PASSWORD}'
