--- a/home-assistant/home-assistant.yaml
+++ b/home-assistant/home-assistant.yaml
@@ -4,7 +4,7 @@ metadata:
   name: homeassistant
   namespace: home-assistant
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: homeassistant
@@ -14,6 +14,18 @@ spec:
         app: homeassistant
     spec:
       # --- Init step: install HACS into /config on your PVC ---
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - homeassistant
+              topologyKey: kubernetes.io/hostname
       containers:
         - name: homeassistant
           image: ghcr.io/home-assistant/home-assistant:stable
