--- a/gitops/apps/root-app.yaml
+++ b/gitops/apps/root-app.yaml
@@ -301,11 +301,11 @@ spec:
         maxDuration: 3m
 
 ---
-# Application: Tailscale
+# Infrastructure: Tailscale
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-tailscale
+  name: infra-tailscale
   namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "5"  # Install after infrastructure (needs secrets)
@@ -315,11 +315,11 @@ spec:
   project: default
   source:
     repoURL: https://github.com/amerenda/amerenda-k3s.git
-    targetRevision: main
-    path: gitops/apps/tailscale
+    targetRevision: feat/move-tailscale-to-infra
+    path: gitops/infra/tailscale
   destination:
     server: https://kubernetes.default.svc
-    namespace: tailscale
+    namespace: default
   syncPolicy:
     automated:
       prune: true
