feat: move tailscale to infra (#4)
* feat: move Tailscale from apps to infra

- Move Tailscale application from gitops/apps/tailscale to gitops/infra/tailscale
- Update Tailscale to run in default namespace instead of tailscale namespace
- Update root-app.yaml to reference new Tailscale location as infra-tailscale
- Change targetRevision to feat/move-tailscale-to-infra for testing
- Maintain all Tailscale functionality while moving to infrastructure layer
- removes app tailscale

--- a/gitops/infra/tailscale/externalsecret.yaml
+++ b/gitops/infra/tailscale/externalsecret.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: tailscale-auth-key
-  namespace: tailscale
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
