--- a/gitops/infra/tailscale/deployment.yaml
+++ b/gitops/infra/tailscale/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tailscale
-  namespace: tailscale
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -37,13 +37,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: tailscale
-  namespace: tailscale
+  namespace: default
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: tailscale
-  namespace: tailscale
+  namespace: default
 spec:
   replicas: 2
   strategy:
