--- a/gitops/infra/tailscale/pdb.yaml
+++ b/gitops/infra/tailscale/pdb.yaml
@@ -2,7 +2,7 @@ apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: tailscale
-  namespace: tailscale
+  namespace: default
 spec:
   minAvailable: 1
   selector:
