--- a/ansible/inventory/inventory.ini
+++ b/ansible/inventory/inventory.ini
@@ -13,6 +13,10 @@ rpi3-0 ansible_host=10.100.20.13
 controllers
 longhorn_storage
 
+[storage:children]
+controllers
+longhorn_storage
+
 [controllers:vars]
 ansible_user=alex
 ansible_ssh_private_key_file=~/.ssh/alex_id_ed25519
